kubernetes/k8.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  labels:
    app: hello-node
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 8025
    protocol: TCP
    targetPort: 8025
  selector:
    run: hello-node
    app: hello-node
  sessionAffinity: None
  sessionAffinity: None   
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: hello-node
spec:
   replicas: 1
   template:
     metadata:
       labels:
        run: hello-node
        app: hello-node
        tier: backend
     spec:
       containers:
       - name: hello-node
         image: hello-node:latest
         imagePullPolicy: Never
         ports:
         - containerPort: 8025
         readinessProbe:
            httpGet:
                path: /
                port: 8025
            initialDelaySeconds: 30
            periodSeconds: 5
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-node-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hello-node
        backend:
          serviceName: hello-node
          servicePort: 8025
